# py-lzokay

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  _lzokay.pyx  lzokay.pyi  lzokay_wrap.pxd  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml
lzokay/: __init__.py
python/lzokay/: __init__.py  _lzokay.pyi
src/: lib.rs
src/lzokay/: __init__.py
tests/: test_native.py
