[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "lzokay"
description = "Python bindings for LZ👌, a LZO compression/decompression algorithm."
authors = [{name = "Henrique Gemignani"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/henriquegemignani/py-lzokay"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
]
xfail_strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "C4",
    "RSE",
    "TCH",
    "PTH",
    "COM818", "COM819",
    "ISC",
    "PIE",

    "PLC",
    "PLE",
    "PLR",
    "PLW",
]

[tool.maturin]
python-source = "python"
module-name = "lzokay._lzokay"
features = ["pyo3/extension-module"]