[metadata]
name = lzokay
description = Python bindings for LZ👌, a LZO compression/decompression algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henriquegemignani/py-lzokay
author = Henrique Gemignani

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
   
packages = find:
package_dir =
    = src
    
python_requires = >=3.7

[options.packages.find]
where = src